fix strengths and weakness text so they are well aligned in tablet v.

--- a/src/scss/layout/_strengths-and-weakness.scss
+++ b/src/scss/layout/_strengths-and-weakness.scss
@@ -39,8 +39,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0px 45px;
-    margin: 0px;
+    // padding: 0px 45px;
+    // margin: 0px;
   }
 
   .weakness,
